update gioi thieu

--- a/Project/HTML_CSS/components/Header/Header.html
+++ b/Project/HTML_CSS/components/Header/Header.html
@@ -76,11 +76,13 @@
                 </div>
                 <div class="header__menu--right">
                     <ul class="header__menu--list">
-                        <div class="header__menu--item item-wrapper">
-                            <li class="header__menu--item">GIỚI THIỆU</li>
+                        <div class="header__menu--item item-wrapper item-wrapper_link">
+                            <a class="link" href="http://127.0.0.1:5500/components/container/Introduce.html">
+                                <li class="header__menu--item item_GT">GIỚI THIỆU</li>
+                            </a>
                         </div>
                         <div class="header__menu--item item-wrapper">
-                            <li class="header__menu--item">GIỎ HÀNG</li>
+                                <li class="header__menu--item">GIỎ HÀNG</li>
                         </div>
 
                         <div class="header__menu--item item-wrapper item-account">
