--- a/Project/HTML_CSS/components/Footer/style_footer.css
+++ b/Project/HTML_CSS/components/Footer/style_footer.css
@@ -1,6 +1,6 @@
 .footer{
-    position: fixed;
-    bottom: 0;
+    /* position: fixed;
+    bottom: 0; */
     width: 100%;
     height: auto;
     background-color: #F9E9E9;
