--- a/shopping cart/components/Shopping Cart/ShoppingCart.html
+++ b/shopping cart/components/Shopping Cart/ShoppingCart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style_header.css">
+    <link rel="stylesheet" href="./style_ShoppingCart.css">
     <link rel="stylesheet" href="/assets/fonts/fontawesome-free-6.4.2-web/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-wvfXpqpZZVw5StH7GOUpJ8GhZbR7tc5bFYY5g5f5u9w5bYd73G6fZ0Cc6FdhIsb6x" crossorigin="anonymous">
