--- a/shopping cart/components/Shopping Cart/style_ShoppingCart.css
+++ b/shopping cart/components/Shopping Cart/style_ShoppingCart.css
@@ -190,6 +190,7 @@
 }
 #container {
     width:1150px ;
+    height: 350px;
     margin: auto;
     padding-top: 110px;
 }
@@ -342,3 +343,5 @@
     width: 100%;
 
 }
+
+
