--- a/Project/HTML_CSS/components/Header/Header.html
+++ b/Project/HTML_CSS/components/Header/Header.html
@@ -53,10 +53,10 @@
             <div class="header__menu">
                 <div class="header__menu--left">
                     <ul class="header__menu--list">
-                        <div class="header__menu--item item-wrapper">
+                        <a class="header__menu--item item-wrapper item__home" href="http://127.0.0.1:5500/components/Home/Home.html">
                             <li class="header__menu--item">TRANG CHỦ</li>
 
-                        </div>
+                        </a>
                         <div class="header__menu--item item-wrapper item-sp ">
                             <li class="header__menu--item">SẢN PHẨM</li>
                             <div class="menu__sp">
@@ -81,9 +81,9 @@
                                 <li class="header__menu--item item_GT">GIỚI THIỆU</li>
                             </a>
                         </div>
-                        <div class="header__menu--item item-wrapper">
+                        <a class="header__menu--item item-wrapper item__GH" href="">
                                 <li class="header__menu--item">GIỎ HÀNG</li>
-                        </div>
+                        </a>
 
                         <div class="header__menu--item item-wrapper item-account">
                                 <li class="header__menu--item">TÀI KHOẢN</li>
