--- a/Project/HTML_CSS/components/container/Introduce.html
+++ b/Project/HTML_CSS/components/container/Introduce.html
@@ -225,7 +225,7 @@
         <div class="container__bottom">
             <div class="container__bottom--left bottom__left">
                 <div class="bottom__left--name">
-                    CH BAO KHANG
+                    CHEF BAO KHANG
                 </div>
                 <div class="bottom__left--inf khang__inf">
                     <ul class="khang__inf--list khang__list">
