--- a/Project/HTML_CSS/components/Home/style_footer.css
+++ b/Project/HTML_CSS/components/Home/style_footer.css
@@ -2,7 +2,7 @@
     /* position: fixed;
     bottom: 0; */
     width: 100%;
-    height: 250px;
+    height: auto;
     background-color: #F9E9E9;
 
 }
