update folder sale

--- a/sale/components/sale/sale.html
+++ b/sale/components/sale/sale.html
@@ -116,67 +116,98 @@
                     
                 </div>
                 <div class="sale_ma1_center ma1__center">
-                    <ul class="ma1__center__list center__list">
-                        <li class="center__list--item item__ma">Giảm tối đa 300K</li>
-                        <li class="center__list--item item__dk">Đơn Tối thiểu 0đ</li>
-                        <li class="center__list--item item__hl">Có hiệu lực đến ngày 18/12</li>
-                    </ul>
-                </div>
-                <div class="sale_ma1--right ma1__right">
-                    <ul class="ma1__right--list right__list">
-                        <li class="right__list--item">
-                            <button class="btn__calm">Lấy</button>
-                        </li>
-                        <li class="right__list--item">
-                            <button class="btn__dk">Điều kiện</button>
-                        </li>
-                    </ul>
+                    <div class="ma1__center--left">
+                        <!-- <img class="logo_sale" src="/sale/assets/img/Giam1.png" alt=""> -->
+                        <h1 class="infor-Sale">Miễn phí giao hàng</h1>
+                        <h2 class="infor-Sale2">giảm tối đa 300k</h2>
+
+
+                    </div>
+                    <div class="ma1__center--mid">
+
+                        <ul class="ma1__center__list center__list">
+                            <li class="center__list--item item__ma">Giảm tối đa 300K</li>
+                            <li class="center__list--item item__dk">Đơn Tối thiểu 0đ</li>
+                            <li class="center__list--item item__hl">Có hiệu lực đến ngày 18/12</li>
+                        </ul>
+                    </div>
+                    <div class="sale_ma1--right ma1__right">
+                        <ul class="ma1__right--list right__list">
+                            <div class="right__list--item">
+                                <button class="btn__calm">Lấy</button>
+                            </div>
+                            <div class="right__list--item">
+                                <button class="btn__dk">Điều kiện</button>
+                            </div>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="sale_ma2">
-                <div class="sale_ma2_left">
+                <div class="sale_ma1_left">
                     
                 </div>
-                <div class="sale_ma2_center ma2__center">
-                    <ul class="ma2__center__list center__list">
-                        <li class="center__list--item item__ma">Giảm tối đa 300K</li>
-                        <li class="center__list--item item__dk">Đơn Tối thiểu 0đ</li>
-                        <li class="center__list--item item__hl">Có hiệu lực đến ngày 18/12</li>
-                    </ul>
-                </div>
-                <div class="sale_ma2--right ma2__right">
-                    <ul class="ma2__right--list right__list">
-                        <li class="right__list--item">
-                            <button class="btn__calm">Lấy</button>
-                        </li>
-                        <li class="right__list--item">
-                            <button class="btn__dk">Điều kiện</button>
-                        </li>
-                    </ul>
+                <div class="sale_ma1_center ma1__center">
+                    <div class="ma1__center--left">
+                        <!-- <img class="logo_sale" src="/sale/assets/img/Giam1.png" alt=""> -->
+                        <h1 class="infor-Sale">Giảm giá 20%</h1>
+                        <h2 class="infor-Sale2">giảm tối đa 500k</h2>
+
+
+                    </div>
+                    <div class="ma1__center--mid">
+
+                        <ul class="ma1__center__list center__list">
+                            <li class="center__list--item item__ma">Giảm tối đa 500k</li>
+                            <li class="center__list--item item__dk">Đơn Tối thiểu 2.000.000đ</li>
+                            <li class="center__list--item item__hl">Có hiệu lực đến ngày 18/12</li>
+                        </ul>
+                    </div>
+                    <div class="sale_ma1--right ma1__right">
+                        <ul class="ma1__right--list right__list">
+                            <div class="right__list--item">
+                                <button class="btn__calm">Lấy</button>
+                            </div>
+                            <div class="right__list--item">
+                                <button class="btn__dk">Điều kiện</button>
+                            </div>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="sale_ma3">
-                <div class="sale_ma3_left">
+                <div class="sale_ma1_left">
                     
                 </div>
-                <div class="sale_ma3_center ma3__center">
-                    <ul class="ma3__center__list center__list">
-                        <li class="center__list--item item__ma">Giảm tối đa 300K</li>
-                        <li class="center__list--item item__dk">Đơn Tối thiểu 0đ</li>
-                        <li class="center__list--item item__hl">Có hiệu lực đến ngày 18/12</li>
-                    </ul>
-                </div>
-                <div class="sale_ma3--right ma3__right">
-                    <ul class="ma3__right--list right__list">
-                        <li class="right__list--item">
-                            <button class="btn__calm">Lấy</button>
-                        </li>
-                        <li class="right__list--item">
-                            <button class="btn__dk">Điều kiện</button>
-                        </li>
-                    </ul>
+                <div class="sale_ma1_center ma1__center">
+                    <div class="ma1__center--left">
+                        <!-- <img class="logo_sale" src="/sale/assets/img/Giam1.png" alt=""> -->
+                        <h1 class="infor-Sale">Giảm giá 15%</h1>
+                        <h2 class="infor-Sale2">giảm tối đa 300k</h2>
+
+
+                    </div>
+                    <div class="ma1__center--mid">
+
+                        <ul class="ma1__center__list center__list">
+                            <li class="center__list--item item__ma">Giảm tối đa 300K</li>
+                            <li class="center__list--item item__dk">Đơn Tối thiểu 1.000.000đ</li>
+                            <li class="center__list--item item__hl">Có hiệu lực đến ngày 22/12</li>
+                        </ul>
+                    </div>
+                    <div class="sale_ma1--right ma1__right">
+                        <ul class="ma1__right--list right__list">
+                            <div class="right__list--item">
+                                <button class="btn__calm">Lấy</button>
+                            </div>
+                            <div class="right__list--item">
+                                <button class="btn__dk">Điều kiện</button>
+                            </div>
+                        </ul>
+                    </div>
                 </div>
             </div>
+           
         </div>
     </div>
 
