--- a/sale/components/sale/sale.css
+++ b/sale/components/sale/sale.css
@@ -222,6 +222,7 @@
     background-image: url(https://scontent.xx.fbcdn.net/v/t1.15752-9/363681157_255987044117839_8802502928014108031_n.png?_nc_cat=105&ccb=1-7&_nc_sid=510075&_nc_ohc=4gL-1CmkvQoAX9BtoOt&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdTEYB048TgbellbgYfnAseNi-tDM0e5uyVj_Vdaq5DdNQ&oe=657D34F9);
     text-align: center;
     background-size: cover;
+    border: 2px solid yellow ;
 
 }
 .sale__GT{
@@ -229,4 +230,110 @@
     font-size: 25px;
     font-weight: 600;
     padding-top: 20px;
+    text-align: center;
+    
+}
+.ma1__center{
+    background-color: white;
+    width: 60%;
+    height: 150px;
+    margin: auto;
+    border-radius: 6px;
+    border: 2px solid black; 
+    margin-top: 10px;
+    display: flex;
+}
+.ma1__center--left{
+    width: 20%;
+    height: 150px;
+    float: left;
+    background-color: #3aecd4;
+    background-size: cover;
+    border: 2px solid black;
+    border-radius: 6px;
+}
+.infor-Sale{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 30px;
+    line-height: 30px;
+    text-align: center;
+    justify-content: center;
+    font-weight: 600;
+    color: azure;
+}
+.infor-Sale2{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    text-align: center;
+    color: #9c9c9c;
+}
+.ma1__right{
+    width: 30%;
+    height: 150px;
+    float: right;
+    text-align: center;
+}
+.ma1__center--mid{
+    width: 50%;
+    height: 150px;
+    /* text-align: center; */
+}
+.item__ma{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 30px;
+    line-height: 30px;
+}
+.item__dk{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    line-height: 30px;
+}
+.item__hl{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    line-height: 30px;
+    color: orange;
+}
+.center__list{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: medium;
+    font-weight: 600;
+    width: 400px;
+}
+
+.center__list--item{
+    display: block;
+}
+.right__list--item{
+    float: right;
+    line-height: 50px;
+}
+
+.btn__calm{
+    border-radius: 4px;
+    color: white;
+    background-color: red;
+    width: 200px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: medium;
+    font-weight: 500;
+    margin-top: 20px;
+}
+.btn__calm:hover{
+    color: orange;
+    background-color: white;
+}
+.btn__dk{
+    border-radius: 4px;
+    color: antiquewhite;
+    background-color:gray;
+    width: 200px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: medium;
+    font-weight: 700;
+    
+}
+.btn__dk:hover{
+    color:gray;
+    background-color: antiquewhite;
 }
