--- a/sale/components/sale/style_footer.css
+++ b/sale/components/sale/style_footer.css
@@ -1,6 +1,7 @@
 .footer{
     /* position: fixed;
     bottom: 0; */
+    margin-top: 20px;
     width: 100%;
     height: 250px;
     background-color: #F9E9E9;
